--- a/module_1/lecture_03_css_flex/css_flex/another.css
+++ b/module_1/lecture_03_css_flex/css_flex/another.css
@@ -1,23 +1,36 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 #root {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: start;
+ justify-content: center;
 }
 
 #one {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    bottom: 20px;
-    right: 20px;
-    border-radius: 20px;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 20px;
 }
 
 .hello {
+  width: 100px;
+  height: 100px;
+}
+
+@media only screen and (min-width: 600px) and (max-width: 800px) {
+  #one {
+    position: relative;
     width: 100px;
     height: 100px;
+    bottom: 0;
+    right: 0;
+  }
 }
